# show-me-the-money

./: .gitignore  AGENTS.md  BLOCKED.md  METHODOLOGY.md  PROGRESS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: daily.yml
data/: owners.csv
scripts/: backfill_history.py  ingest_history.py
site/: README.md  app.js  index.html  methodology.html  styles.css
site/dev/: build_site_data.py  make_dev_data.py
src/tracker/: __init__.py  api.py  cli.py  config.py  crosscheck.py  export.py  ingest.py  models.py  owners.py  store.py  turnup.py  validate.py  wastedwind.py
tests/: test_api.py  test_cli.py  test_crosscheck.py  test_export.py  test_store.py  test_turnup.py  test_validate.py  test_wastedwind.py
