[project]
name = "tracker"
version = "0.1.0"
description = "Great Britain balancing-mechanism constraint cost tracker"
authors = [
    { name = "Joshua Carey", email = "josh5485@me.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.27.0",
]

[project.scripts]
tracker = "tracker.cli:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
